@@ -468,9 +468,11 @@ class ImportVCard extends BaseService
      */
     private function importFromFN(Contact $contact, VCard $entry): void
     {
-        $fullnameParts = preg_split('/ +/', $entry->FN);
+        $fullnameParts = preg_split('/\s+/', $entry->FN, 2);
         $contact->first_name = $this->formatValue($fullnameParts[0]);
-        $contact->last_name = $this->formatValue($fullnameParts[1]);
+        if (count($fullnameParts) > 1) {
+            $contact->last_name = $this->formatValue($fullnameParts[1]);
+        }
 
         if (! empty($entry->NICKNAME)) {
             $contact->nickname = $this->formatValue($entry->NICKNAME);
