@@ -2,6 +2,7 @@ UNRELEASED CHANGES:
 
 * Fix Storage page not being displayed
 * Add ability to create tasks that are not linked to any contacts
+* Fix VCard import without firstname
 * Fix avatar display in searches
 
 RELEASED VERSIONS:
